Alignment Flex bug fix

--- a/style.css
+++ b/style.css
@@ -58,9 +58,11 @@ main {
 .movie-info {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 0.75rem 1rem 1rem;
     color: #eee;
     letter-spacing: 0.5px;
+    height: 100px;
 }
 
 .movie-info h3 {
